# Kamite

./: .editorconfig  .eslintrc.yaml  .gitignore  CHANGELOG.md  Makefile  README.md  package.json  pnpm-lock.yaml  pom.xml  tsconfig.json  vite.config.ts
config/: config.default.hocon  config.spec.hocon
contrib/: Kamite-Watch-Clipboard.ps1  KamiteSendRPGMaker.js  anki-latest-edit-field.sh  anki-screenshot.sh  edge-tts-cached.sh  kamite-deeplx.sh  kamite-toggle-visibility.sh  kamite-watch-clipboard.sh
extra/mpv/: kamite.lua
extra/userscripts/: Kamite DeepL mod.user.js  Kamite One-Click OCR.user.js  Kamite ichi.moe mod.user.js  Kamite jpdb mod.user.js
launcher/: Cargo.toml  build.rs
launcher/.cargo/: config.toml
launcher/kamite-launcher-linux/: Cargo.toml
launcher/linux/src/: main.rs
launcher/res/: Kamite.exe.manifest  resources.rc
launcher/scripts/: Kamite.ps1
launcher/src/: main.rs
launcher/win/: Cargo.toml  build.rs
launcher/win/aux/: Kamite (Debug).bat
launcher/win/res/: Kamite.manifest  resources.rc
launcher/win/src/: console_wrapper.rs  main.rs
lib/generic/: kamite_mpv.lua  mangaocr_adapter.py  mangaocr_wrapper.py
res/: kamite.desktop
scripts/: install.sh
scripts/support/: make-runtime-win.ps1
src/web/: .env.development  App.tsx  GlobalTooltip.tsx  clipboardInserter.ts  dom.ts  eventNotifier.ts  features.ts  globalStyles.ts  index.html  index.tsx  theme.ts
src/web/backend/: ws.ts  (+6 more)
support/definitions/: pmd-ruleset.xml
support/scripts/: ListKnownConfigKeys.java  codegen-config.sh  generate-config-classes.sh  make-runtime-win.ps1
(+383 files in other folders)
