[package]
name = "kamite-launcher-win"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "kamite-launcher-win-main"
path = "src/main.rs"

[[bin]]
name = "kamite-launcher-win-console-wrapper"
path = "src/console_wrapper.rs"

[dependencies]
libloading = "0.7"
jni-sys-dynamic = { git = "https://github.com/fauu/jni-sys-dynamic-rs" }
winapi = { version = "0.3.9", features = ["winbase", "wincon"] }
