[package]
name = "kamite-launcher-win"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "kamite-launcher-win-main"
path = "src/main.rs"

[[bin]]
name = "kamite-launcher-win-console-wrapper"
path = "src/console_wrapper.rs"

[dependencies]
libloading = "0.8.6"
jni-sys-dynamic = { git = "https://github.com/fauu/jni-sys-dynamic-rs" }
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_System_Console"] }